fixed homepage spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-a{
+a {
   text-decoration: none;
   color: #2f3e46;
 }
@@ -15,7 +15,8 @@ body {
   background-color: #eeeeee;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #2f3e46;
 }
 
@@ -65,7 +66,7 @@ h1, h2 {
   border-radius: 4px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
-  width: 40%;
+  width: 100%;
 }
 
 footer {
@@ -140,6 +141,7 @@ label {
   align-items: center;
   justify-content: center;
 }
+
 .dashboard__container {
   display: flex;
   flex-direction: column;
@@ -147,6 +149,7 @@ label {
   background-color: #dcdcdc;
   padding: 30px;
 }
+
 .dashboard__btn {
   padding: 10px;
   font-size: 18px;
@@ -155,6 +158,7 @@ label {
   color: white;
   background-color: black;
 }
+
 .dashboard div {
   margin-top: 7px;
 }
@@ -166,6 +170,7 @@ label {
   align-items: center;
   justify-content: center;
 }
+
 .login__container {
   display: flex;
   flex-direction: column;
@@ -173,11 +178,13 @@ label {
   background-color: #dcdcdc;
   padding: 30px;
 }
+
 .login__textBox {
   padding: 10px;
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 .login__btn {
   padding: 10px;
   font-size: 18px;
@@ -186,9 +193,11 @@ label {
   color: white;
   background-color: black;
 }
+
 .login__google {
   background-color: #4285f4;
 }
+
 .login div {
   margin-top: 7px;
 }
@@ -200,6 +209,7 @@ label {
   align-items: center;
   justify-content: center;
 }
+
 .register__container {
   display: flex;
   flex-direction: column;
@@ -207,11 +217,13 @@ label {
   background-color: #dcdcdc;
   padding: 30px;
 }
+
 .register__textBox {
   padding: 10px;
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 .register__btn {
   padding: 10px;
   font-size: 18px;
@@ -220,9 +232,11 @@ label {
   color: white;
   background-color: black;
 }
+
 .register__google {
   background-color: #4285f4;
 }
+
 .register div {
   margin-top: 7px;
 }
@@ -234,6 +248,7 @@ label {
   align-items: center;
   justify-content: center;
 }
+
 .reset__container {
   display: flex;
   flex-direction: column;
@@ -241,11 +256,13 @@ label {
   background-color: #dcdcdc;
   padding: 30px;
 }
+
 .reset__textBox {
   padding: 10px;
   font-size: 18px;
   margin-bottom: 10px;
 }
+
 .reset__btn {
   padding: 10px;
   font-size: 18px;
@@ -254,6 +271,7 @@ label {
   color: white;
   background-color: black;
 }
+
 .reset div {
   margin-top: 7px;
 }
@@ -317,8 +335,9 @@ textarea {
   display: inline-flex;
   justify-content: space-between;
 }
+
 .project_messages {
-  display:inline-block;
+  display: inline-block;
   width: 45%;
   margin: 2.5%;
 
@@ -333,15 +352,14 @@ textarea {
   height: 200px;
   overflow-x: hidden;
   overflow-y: auto;
-  text-align:justify;
+  text-align: justify;
   border-style: solid;
 
 }
 
 .project_header {
-  display:inline-block;
+  display: inline-block;
   width: 45%;
   text-align: top;
   margin: 2.5%;
 }
-
